--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 markers =
     login_guest: marker for guest on the main page
     test_user: marker for registered users from product page
+    need_review: marker for review on stepik
 
